[docs] Capitalization / puctuation fixes in mprof-report manpage.

--- a/man/mprof-report.1
+++ b/man/mprof-report.1
@@ -180,8 +180,8 @@ with the current process id and \f[I]%t\f[] with the current date
 and time, then do according to \f[I]OUTSPEC\f[]:
 .RS 2
 .IP \[bu] 2
-if \f[I]OUTSPEC\f[] begins with a \f[I]|\f[] character, execute the
-rest as a program and feed the data to its standard input
+If \f[I]OUTSPEC\f[] begins with a \f[I]|\f[] character, execute the
+rest as a program and feed the data to its standard input.
 .IP \[bu] 2
 if \f[I]OUTSPEC\f[] begins with a \f[I]-\f[] character, use the
 rest of OUTSPEC as the filename, but force overwrite any existing
