[docs] mprof-report manpage -- fix desctiption of existing file behavior
Fix the description of what happens when the output file already exists.

--- a/man/mprof-report.1
+++ b/man/mprof-report.1
@@ -185,8 +185,7 @@ rest as a program and feed the data to its standard input.
 .IP \[bu] 2
 .IP \[bu] 2
 otherwise write the data the the named file: note that is a file by
-that name already exists, a warning is issued and profiling is
-disabled.
+that name already exists, it is truncated.
 .RE
 .IP \[bu] 2
 \f[I]report\f[]: the profiling data is sent to mprof-report, which
