[docs] mprof-report manpage - document heapshot-on-shutdown
Document the heapshot-on-shutdown log profiler option.

--- a/man/mprof-report.1
+++ b/man/mprof-report.1
@@ -146,6 +146,9 @@ instruction pointer.
 This is equivalent to the value \[lq]100\[rq].
 A value of zero for \f[I]FREQ\f[] effectively disables sampling.
 .IP \[bu] 2
+\f[I]heapshot-on-shutdown\f[]: collect heap shot data when the runtime
+shuts down.
+.IP \[bu] 2
 \f[I]maxframes=NUM\f[]: when a stack trace needs to be performed,
 collect \f[I]NUM\f[] frames at the most.
 The default is 32.
