--- a/msvc/README
+++ b/msvc/README
@@ -22,11 +22,15 @@ MAINTENANCE
 	Files that should not be build on Windows should be excluded  using this configuration:
 
 	<ClCompile Include="$(MonoSourceLocation)\mono\mini\tramp-wasm.c">
-		<ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-		<ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-		<ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-		<ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+		<ExcludedFromBuild>$(ExcludeFromWindowsBuild)</ExcludedFromBuild>
 	</ClCompile>
+
+	and at the begning of the target file have a property set when to exclude files. This example will always
+	exclude the file, but could be condtional if needed:
+
+	<PropertyGroup>
+		<ExcludeFromWindowsBuild>true</ExcludeFromWindowsBuild>
+	</PropertyGroup>
 
 	All header files added to makefiles should be included in the different targets files for consistency.
 
